--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ header {
     color: var(--Blue-500);
 }
 
-footer {
+.footer {
     display: flex;
     flex-direction: row;
     justify-content: start;
